--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
-name = "xircuits-component-library-template"
+name = "xai-telegram"
 version = "0.1.0"
-description = "A brief description of your component library"
-authors = [{ name = "Your Name", email = "you@example.com" }]
+description = "Xircuits Component Library to interface with Telegram"
+authors = [{ name = "Muhammad Fahreza Alghifari", email = "fahreza@xpress.ai" }]
 license = "Apache-2.0"
 readme = "README.md"
-repository = "https://github.com/yourrepo/your-library"
-keywords = ["xircuits"]
+repository = "https://github.com/XpressAI/xai-telegram"
+keywords = ["xircuits", "telegram"]
 
 # Xircuits-specific configurations
 [tool.xircuits]
-default_example_path = "example.xircuits"
+default_example_path = "examples/TelegramEchoBot.xircuits"
 requirements_path = "requirements.txt"
