--- a/.github/workflows/run-workflow-tests.yml
+++ b/.github/workflows/run-workflow-tests.yml
@@ -16,7 +16,7 @@ jobs:
         python-version: ["3.9", "3.10", "3.11"]
     env:
       TEST_XIRCUITS: |
-        example.xircuits
+        examples/TelegramEchoBot.xircuits
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
